fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@ h1 {
   .content {
     padding: 1.5em;
   }
+
+  .content a {
+    font-size: 1rem;
+    margin-right: 1.2em;
+  }
 }
 
 
